--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 	<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 	<title>Speaker Deck Slider</title>
 </head>
-<body>
+<body class="bg-gray-200">
 	<div id="app"></div>
 </body>
 </html>
